<resources>
    <string name="app_name">PomodoroTimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="custom">Custom</string>
    <string name="picture_of_fruit">picture of fruit</string>
    <string name="pause">Pause</string>
    <string name="aboutPomodoro">The Pomodoro technique is a time management method which uses
                                a timer to break work down into intervals. The work intervals are 25 minutes and are separated by short breaks.
                                After 4 work intervals you take a long break of 15 minutes and then repeat the process. \nSource: Wikipedia\nIcons made by Smashicons on flaticon.com</string>
    <string name="about">About</string>
    <string name="pineapple">Pineapple</string>
    <string name="avocado">Avocado</string>
    <string name="dragon_fruit">Dragon Fruit</string>
    <string name="theme">Theme</string>
</resources>