<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/settingsTitle"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/themeText"
            style="@style/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            app:layout_constraintTop_toBottomOf="@id/settingsTitle"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical5"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeText"

            >

            <RadioButton
                android:id="@+id/rb_pineapple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pineapple" />

            <RadioButton
                android:id="@+id/rb_blueberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blueberry" />

            <RadioButton
                android:id="@+id/rb_dragonfruit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dragon_fruit" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>